# python-playwright-test-demo

./: .env-example  .gitignore  README.md  pyproject.toml  pytest.ini
tests/: test_user_endpoint.py
tests/templates/: user_creation_data.csv  user_creation_template.json.j2
